apps/shiplog/tests/schema/snapshots/schema__format_stability__format_bundle_manifest_empty_files.snap
---
source: apps/shiplog/tests/schema/format_stability.rs
assertion_line: 433
expression: manifest
---
{
  "run_id": "empty",
  "generated_at": "2025-06-01T12:00:00Z",
  "profile": "Internal",
  "files": []
}
