apps/shiplog/tests/schema/snapshots/schema__format_stability__format_coverage_manifest_empty.snap
---
source: apps/shiplog/tests/schema/format_stability.rs
assertion_line: 422
expression: manifest
---
{
  "run_id": "empty",
  "generated_at": "2025-06-01T12:00:00Z",
  "user": "",
  "window": {
    "since": "2025-01-01",
    "until": "2025-01-02"
  },
  "mode": "created",
  "sources": [],
  "slices": [],
  "warnings": [],
  "completeness": "Unknown"
}
