apps/shiplog/tests/schema/snapshots/schema__format_stability__format_manual_date_range.snap
---
source: apps/shiplog/tests/schema/format_stability.rs
assertion_line: 290
expression: d
---
{
  "start": "2025-01-01",
  "end": "2025-12-31"
}
