apps/shiplog/tests/schema/snapshots/schema__format_stability__format_manual_date_single.snap
---
source: apps/shiplog/tests/schema/format_stability.rs
assertion_line: 281
expression: d
---
"2025-06-01"
